assets/style/main.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
:root
{
    --background-color-when-hover:#ccc;
}
*{
    margin: 0;
    padding: 0;
}
html{
    scroll-behavior: smooth;
}
#main{
    height: 100%;
    width: 100%;
    background-color: white;
}

#header{
    height: 46px;
    width: 100%;
    background-color: black;
    display: fixed;
    font-family: 'Poppins',sans-serif;
    position: relative;
    top: 0;
    left: 0;
}

.nav>.nav-element{
  display: inline-block;
  list-style: none;
  position: relative;
  
}

.nav-content{
    text-decoration: none;
    line-height: 46px;
    color: white;
    text-transform: uppercase;
    padding: 0 25px;
    display: inline-block;
    font-weight: 700;

}
.nav-element:hover >.nav-content
{
    color: #000!important;
    background-color:var(--background-color-when-hover) !important;
}
.nav-element:hover > .sub-nav
{
    box-shadow: 1px 2px 3px 3px rgb(160, 155, 155);
    height: 130px;
}
.sub-nav
{
    position: absolute;
    list-style: none;
    background-color: white;
    display: block;
    overflow: hidden;
    height: 0;
    transition: all linear 0.2s;
    
}
.sub-nav-content
{
    text-decoration:none;
    color: #000;
    display:block;
    padding: 10px 12px;
    padding-right: 20px;
    
}
.sub-nav-element:hover> .sub-nav-content
{
    background-color:var(--background-color-when-hover);
}
.search
{
    position: absolute;
    color:white;
    background-color: #000;
    top:0;
    line-height: 46px;
    right: 0;
    padding: 0 20px;
}
.search:hover
{
    background-color: red;
}
/*nav-mobile*/
.button-menu
{
    color: white;
    font-size: 30px;
    margin-left: 10px;
    height: 46px;
    line-height: 46px;
}
.nav-mobile
{
    position: fixed;
    width: 50%;
    background-color: white;
    top:0;
    left: 0;
    height: 100%;
    z-index: 101;
    display: block;
    transform: translateX(-100%);
    opacity: 0;
    transition: all linear 0.2s;

}
.nav-mobile-content
{
  display: block;
  text-align: justify;
  color:black;
  text-decoration: none;
  font-weight: 900;
  padding: 10px 12px;
  font-family: 'Poppins',sans-serif;
  font-size: 30px;
}
.nav-mobile-element:hover > .nav-mobile-content
{
   background-color: var(--background-color-when-hover);
   color: white;

}

.nav-mobile-element:hover > .sub-nav-mobile
{
   height: 130px;
}
.sub-nav-mobile
{
    background-color: rgb(54, 52, 52,0.5);
    position: relative;
    overflow: hidden;
    height: 0;
   transition: height linear 0.1s;

}
.sub-nav-mobile-content
{
    color: #333;
    font-weight: 600;
    text-decoration: none;
    display: block;
    padding: 10px 15px;
}
.sub-nav-mobile-element:hover > .sub-nav-mobile-content
{
       background-color: white;
}
.overlay
{
    position: fixed;
    height: 100%;
    width: 100%;
    top:0;
    left: 0;
    bottom: 0;
    background-color:rgb(73, 71, 71,0.3);
    opacity: 0;
    display: none;
    transition: all linear 0.2s;

}
.button-close
{
    position: absolute;
    top: 5px;
    right: 10px;
    font-size: 40px;
}
.check
{
    position: absolute;
    right: 30px;
    z-index: 999;
    display: none;
}
.check:checked ~ .overlay
{
    opacity: 1;
   display: block;
}
.check:checked ~ .nav-mobile
{
    opacity: 1;
    transform: translateX(0%);
}
/*responsive*/
/* tablet
*/
@media screen and (max-width:767px){
    .nav{
        display: none;
    }
}

@keyframes changeHeight {
    from{
        height: 0;
    }
    to{
        height: 100%;
    }
 }

